Vinculación HTML con JS

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>CRUD - Lista de pendientes</title>
   </head>
   <body>
-    <h1>Proyecto CRUD</h1>
+    <h1>Proyecto CRUD Lista</h1>
+    <script src="./assets/js/app.js"></script>
   </body>
 </html>
