--- a/index.html
+++ b/index.html
@@ -10,11 +10,26 @@
       integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
   <body>
-    <h1>Proyecto CRUD Lista</h1>
-
-    <!-- SCRIPTS AQUÍ -->
+    <h1 class="text-center my-4">Proyecto CRUD Lista</h1>
+    <div class="container">
+      <div class="mb-3">
+        <input
+          type="text"
+          id="nueva-tarea"
+          class="form-control"
+          placeholder="Ingresa una tarea"
+        />
+      </div>
+      <div class="mb-3">
+        <button id="btn-agregar" class="btn btn-primary w-100">
+          Agregar Tarea
+        </button>
+      </div>
+      <ul id="lista-tareas" class="list-group"></ul>
+    </div>
     <script src="./assets/js/app.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
