--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
         />
       </div>
       <div class="mb-3">
-        <button id="btn-agregar" class="btn btn-primary w-100">
+        <button
+          id="btn-agregar"
+          class="btn btn-primary w-100"
+          onclick="agregarTarea()"
+        >
           Agregar Tarea
         </button>
       </div>
